--- a/HWMonitorDisp.csproj
+++ b/HWMonitorDisp.csproj
@@ -37,7 +37,7 @@
       <HintPath>packages\Humanizer.Core.2.2.0\lib\netstandard1.0\Humanizer.dll</HintPath>
     </Reference>
     <Reference Include="OpenHardwareMonitorLib">
-      <HintPath>.\OpenHardwareMonitorLib.dll</HintPath>
+      <HintPath>References\OpenHardwareMonitorLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
